# cerniq-classic-archive

./: .env.example  .env.production.template  .gitignore  .gitleaks.toml  .vercelignore  AGENTS.md  ARCHITECTURE_PART2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  EXECUTION_PLAN.md  GTM_Intelligence_Report_Mar2026.docx  LICENSE  Makefile  NEXT_STEPS.md  PROCESS_CHECK.md  PRODUCT_SPEC.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_MARKET_DATA.md  README.md  SECURITY.md  START_HERE.md  VALUATION_TESTING_GUIDE.md  apply_migration.py  commit-20-improvements.sh  commit-all.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt  setup.sh  test_cyclical_valuation.sh  test_data_clean.sql  test_data_lrcx.sql  test_data_lrcx_fixed.sql  test_data_lrcx_v2.sql  test_features.sh  (+4 more)
.cerniq/: CONTRACTS.md  README.md  terminals.json
.github/: dependabot.yml  (+1 more)
backend/: Cargo.toml  Dockerfile  new_detect_cycles.txt
backend/migrations/: 001_users.sql  004_ai_insights.sql  005_waitlist.sql  008_findings_reports.sql
backend/src/: config.rs  error.rs  main.rs  market_data.rs  models.rs  parsers.rs  state.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs  verify_supabase.rs
backend/src/routes/: analyze.rs  auth.rs  features.rs  filings.rs  findings.rs  insights.rs  market_data.rs  mod.rs  portfolios.rs  reports.rs  reports_gen.rs  risk.rs  screener.rs  tickers.rs  uploads.rs  valuation.rs  waitlist.rs  websocket.rs  workspaces.rs
backend/src/services/: features.rs  leak_detectors.rs  market_data.rs  mock_valuations.rs  mod.rs  sec_filings.rs  yahoo_finance.rs
backend/src/valuation/: cyclical.rs  mod.rs
backend/uploads/: 1e3fe600-b1ba-4075-b084-1bde732a27f1_sample_ap_export.csv
crates/compute-core/: Cargo.toml
crates/compute-core/src/: monte_carlo.rs  options.rs  risk.rs
(+2774 files in other folders)
