[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1"
once_cell = "1.19"

# Numerical computing
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
num-traits = "0.2"

# WebSocket
futures = "0.3"
tokio-stream = "0.1"
rand = "0.8"

# Configuration
config = "0.14"

# Hashing
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
