[package]
name = "compute-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
rand = "0.9"
statrs = "0.16" # For statistical references
getrandom = { version = "0.2", features = ["js"] } # Required for rand in WASM
rand_distr = "0.5.1"
ndarray-stats = "0.7.0"

[dev-dependencies]
approx = "0.5"
